fix: fix cep
